[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Title/Title.gd" type="Script" id=1]
[ext_resource path="res://src/Title/Hexa.gd" type="Script" id=2]
[ext_resource path="res://assets/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "rot"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hexa:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 500
use_mipmaps = true
extra_spacing_char = -5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 200
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 200
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="PixilationVPC" type="ViewportContainer" parent="."]
margin_right = 400.0
margin_bottom = 400.0
rect_rotation = 360.0
mouse_filter = 2
stretch = true

[node name="PixilationVP" type="Viewport" parent="PixilationVPC"]
size = Vector2( 100, 100 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Hexa" type="MeshInstance2D" parent="PixilationVPC/PixilationVP"]
position = Vector2( 50, 50 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PixilationVPC/PixilationVP"]
autoplay = "rot"
anims/rot = SubResource( 1 )

[node name="MazeLabel" type="Label" parent="."]
margin_right = 769.0
margin_bottom = 397.0
custom_fonts/font = SubResource( 2 )
text = "Maze"
valign = 1
clip_text = true

[node name="TaglineLabel" type="Label" parent="."]
margin_left = 4.10107
margin_top = 350.643
margin_right = 1297.1
margin_bottom = 430.643
custom_fonts/font = SubResource( 3 )
text = "Limited-visibility hexagonal maze game"

[node name="PressLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 2018.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 4 )
text = "Press any button to continue..."

[node name="Tween" type="Tween" parent="."]
